desplegue/app/frontend/qa_error.txt
============================= test session starts =============================
platform win32 -- Python 3.14.1, pytest-9.0.2, pluggy-1.6.0 -- D:\DashboardRA\.venv\Scripts\python.exe
cachedir: .pytest_cache
rootdir: D:\DashboardRA
plugins: mock-3.15.1
collecting ... collected 0 items / 1 error

=================================== ERRORS ====================================
______________ ERROR collecting QA_Suite/test_data_integrity.py _______________
.venv\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
.venv\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Python314\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1398: in _gcd_import
    ???
<frozen importlib._bootstrap>:1371: in _find_and_load
    ???
<frozen importlib._bootstrap>:1342: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:938: in _load_unlocked
    ???
.venv\Lib\site-packages\_pytest\assertion\rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.venv\Lib\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Python314\Lib\ast.py:46: in parse
    return compile(source, filename, mode, flags,
E     File "D:\DashboardRA\QA_Suite\test_data_integrity.py", line 10
E       from Dash_board_RG_v1.01 import get_engine, load_geopolitical_heatmap_data
E                            ^^^
E   SyntaxError: invalid syntax
=========================== short test summary info ===========================
ERROR QA_Suite/test_data_integrity.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
============================== 1 error in 0.43s ===============================
